--- a/2019/10/housing-guide/style.css
+++ b/2019/10/housing-guide/style.css
@@ -54,7 +54,7 @@ section {
 
 .content-row .readmore-btn {
     margin-left: 0;
-    margin-right: 0;
+    margin-right: 0 ;
 }
 
 .crime .readmore-btn {
@@ -186,13 +186,11 @@ section {
 }
 
 .hg-card-circle-img {
-    border-radius: 50%;
-    height: 130px;
-    width: 130px;
+    height: 150px;
+    width: 150px;
     margin: 0 auto;
     background-size: cover;
     background-position: center;
-    background-color: #f9f9f9;
 }
 
 .hg-opinion-img {
@@ -292,7 +290,7 @@ section {
     margin-top: 60px;
     margin-right: 200px;
     margin-bottom: 100px;
-    background-image: url("https://snworksceo.imgix.net/dpn/22e3f1b5-6d90-40e1-8f94-736078457749.sized-1000x1000.jpg?");
+    background-image: url("https://snworksceo.imgix.net/dpn/897c5d64-848b-4525-9fd5-94fa4c8b0646.sized-1000x1000.png?");
     height: 80vh;
     border-radius: 15px;
     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
