finished and added sharecards

--- a/2019/10/housing-guide/style.css
+++ b/2019/10/housing-guide/style.css
@@ -15,7 +15,7 @@ a {
 
 .dom-visual {
     height: auto;
-    background-image: url('./imgs/housing_guide_dom.svg');
+    background-image: url('https://s3.amazonaws.com/snwceomedia/dpn/db1557f6-0d25-470e-95f0-8d9482c08691.original.svg');
     background-position: bottom center;
     background-size: cover;
     background-repeat: no-repeat;
