--- a/2019/11/basketball-preview/style.css
+++ b/2019/11/basketball-preview/style.css
@@ -13,6 +13,16 @@ footer {
     text-align: center;
 }
 
+.dom-visual {
+    height: auto;
+    background-image: url(https://snworksceo.imgix.net/dpn/afecbda9-5424-4ab6-8d5d-3cf7ff75db55.sized-1000x1000.png?);
+    background-position: bottom center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin-top: 40px;
+    padding-bottom: 56.25%;
+}
+
 h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
     font-style: normal;
@@ -168,10 +178,53 @@ h6 {
     margin-bottom: 30px;
 }
 
+.feature {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.feature .feature-img {
+    margin-top: 60px;
+    margin-bottom: 20px;
+    background-size: cover;
+    height: 500px;
+    border-radius: 15px;
+    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
+    display: flex;
+}
+
+.feature .women-img {
+    background-image: url("https://snworksceo.imgix.net/dpn/0794b030-fb30-45cf-ad27-e37746c0cb34.sized-1000x1000.jpg?");
+    margin-left: 200px;
+    align-items: flex-start;
+}
+
+.feature .mens-img {
+    background-image: url("https://snworksceo.imgix.net/dpn/0c45bd2a-6461-447b-95a3-fa7d43d227a3.sized-1000x1000.jpg?");
+    margin-right: 200px;
+    height: 600px;
+    justify-content: flex-end;
+    align-items: flex-start;
+}
+
+.womens-feature .bubble {
+    width: 35%;
+    margin-left: -200px;
+}
+
+.mens-feature .bubble {
+    width: 35%;
+    margin-right: -200px;
+}
+
 @media screen and (min-width: 992px) {
 }
 
 @media screen and (max-width: 768px) {
+    .dom-visual {
+        background-image: url("https://snworksceo.imgix.net/dpn/2b6859b8-9c69-46ca-93d3-6de61235f02f.sized-1000x1000.png?");
+        padding-bottom: 630px;
+    }
 }
 
 @media screen and (max-width: 576px) {
