added char spacing to even it out

--- a/2019/11/basketball-preview/style.css
+++ b/2019/11/basketball-preview/style.css
@@ -222,6 +222,10 @@ h6 {
     display: none;
 }
 
+.shrink-spacing a {
+    letter-spacing: -0.7px;
+}
+
 @media screen and (min-width: 992px) {
 }
 
