added section opinion header

--- a/2019/12/year-in-review/style.css
+++ b/2019/12/year-in-review/style.css
@@ -65,7 +65,7 @@ body {
     font-size: 18px;
 }
 
-.section-header {
+.section-opinion .section-header {
     color: #131313;
     font-family: 'DM Serif Display', serif;
     font-style: italic;
