--- a/2019/12/year-in-review/style.css
+++ b/2019/12/year-in-review/style.css
@@ -8,7 +8,7 @@ body {
     color: #E7525F;
     font-family: 'Open Sans', sans-serif;
     font-size: 20px;
-    font-weight: bold;
+    font-t: bold;
     margin-bottom: 12px;
 }
 
@@ -72,7 +72,7 @@ body {
     font-style: italic;
     text-align: center;
     margin-top: 88px;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
 
 .column-title {
@@ -87,6 +87,45 @@ body {
     color:#131313;
     font-family: 'DM Serif Display', serif;
     font-size: 28px;
+    margin-bottom: 12px;
+}
+
+.hg-opinion-img {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.hg-opinion-img p {
+    margin-bottom: 0px;
+    margin-left: 16px;
+    color: #8E929F;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.opinion-img {
+    height: 54px;
+    width: 54px;
+    background-color: #f9f9f9;
+    float: left;
+    border-radius: 50%;
+    background-size: cover;
+    background-position: top;
+    flex-shrink: 0;
+}
+
+.opinion-card {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-bottom: 60px;
+    padding-bottom: 30px;
+    padding-right: 20px;
+}
+
+.opinion-card-img {
+    margin-bottom: 20px;
 }
 
 .section-description {
