--- a/2019/12/year-in-review/style.css
+++ b/2019/12/year-in-review/style.css
@@ -7,9 +7,9 @@ body {
 .section-header {
     color: #E7525F;
     font-family: 'Open Sans', sans-serif;
-    font-size: 20px;
-    font-t: bold;
-    margin-bottom: 12px;
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 16px;
 }
 
 .more-stories .section-header {
@@ -19,6 +19,12 @@ body {
 
 .section-inverse .more-stories .section-header {
     color: #131313;
+}
+
+.more-stories .opinion {
+    color:#131313;
+    font-weight: bold;
+    margin-bottom: 20px;
 }
 
 /* use h3 */
@@ -132,13 +138,30 @@ body {
     margin-bottom: 20px;
 }
 
+
+.more-columns p {
+        color: #8E929F;
+        font-weight: bold;
+        font-size: 14px;
+        margin-top: 20px;
+}
+
 .section-description {
     max-width: 50%;
     margin: 16px auto 64px;
     text-align: center;
 }
 
+.more-stories {
+    margin-top: 20px;
+    padding-top: 24px;
+}
+
 .section-inverse .secondary-story {
+    color: #131313;
+}
+
+.section-opinion .secondary-story {
     color: #131313;
 }
 
@@ -159,6 +182,10 @@ body {
 .section-inverse {
     background-color: white;
     padding: 80px 0px;
+}
+
+.more-stories .section-inverse {
+    background-color: #f9f9f9;
 }
 
 .section-inverse .section-main-header {
@@ -182,6 +209,10 @@ body {
     color: #6C6F78;
 }
 
+.section-opinion .date {
+    color: #6C6F78;
+}
+
 .more-stories {
     margin-top: 20px;
     padding-top: 20px;
@@ -196,11 +227,19 @@ body {
     border-right: 1px solid rgba(0, 0, 0, 0.3);
 }
 
+.section-opinion .right-border {
+    border-right: 1px solid rgba(0, 0, 0, 0.3);
+}
+
 .top-border {
     border-top: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .section-inverse .top-border {
+    border-top: 1px solid rgba(0, 0, 0, 0.3);
+}
+
+.section-opinion .top-border {
     border-top: 1px solid rgba(0, 0, 0, 0.3);
 }
 
