--- a/2019/12/year-in-review/style.css
+++ b/2019/12/year-in-review/style.css
@@ -248,11 +248,16 @@ a:hover {
     background: #E7525F;
 }
 
+.street-card:hover {
+    background: #D23C49;
+}
+
 .street-header {
     color: white;
     font-size: 40px;
     font-family: 'DM Serif Display', serif;
     margin-left: 28px;
+    margin-right: 28px;
     position: absolute;
     bottom: 72px;
 }
