deploy 2020 fall dp join page

--- a/2020/join/style.css
+++ b/2020/join/style.css
@@ -92,7 +92,7 @@ section {
 section.intro {
   display: flex;
   justify-content: center;
-  background: linear-gradient(transparent, transparent, #000), url('https://snworksceo.imgix.net/dpn/0f26a007-001d-4745-8088-7db4e3297602.sized-1000x1000.jpeg');
+  background: linear-gradient(transparent, transparent, #000), url('https://snworksceo.imgix.net/dpn/a692e1b6-3022-4759-b1b9-a2f85ff75667.sized-1000x1000.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
