--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -37,6 +37,9 @@
 /* Lora font family */
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 
+/* Spectral font family */
+@import url('https://fonts.googleapis.com/css2?family=Spectral&display=swap');
+
 /*Futura PT font family */
 @import url("https://use.typekit.net/qmg7ofa.css");
 
