--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -40,6 +40,12 @@
 /* Spectral font family */
 @import url('https://fonts.googleapis.com/css2?family=Spectral&display=swap');
 
+/* Anton font family */
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+
+/* Poppins font family*/
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
+
 /*Futura PT font family */
 @import url("https://use.typekit.net/qmg7ofa.css");
 
@@ -48,6 +54,8 @@
 
 /*Rama Gothic C Bold */
 @import url("https://use.typekit.net/ijd8cks.css");
+
+
 
 html {
   scroll-behavior: smooth;
